skip team selection if user exists

--- a/users.yaml
+++ b/users.yaml
@@ -1,10 +1,2 @@
-- Omer Alon:
-  - Liverpool
-  - Abasar FC
-  - English league
-  - LazLeague
-- Omer Alon 2:
-  - Idra FC
-  - A FC
-  - Bundesliga
-  - LaL iga
+- !!python/unicode 'g':
+  - !!python/str "TSV 1860 M\xFCnchen"
