--- a/users.yaml
+++ b/users.yaml
@@ -1,2 +1,15 @@
 - !!python/unicode 'g':
   - !!python/str "TSV 1860 M\xFCnchen"
+- !!python/unicode 'Omer Alon':
+  - !!python/str "FC Bayern M\xFCnchen"
+  - FC Barcelona
+  - Real Madrid CF
+  - Arsenal FC
+  - Chelsea FC
+  - Liverpool FC
+  - Manchester City FC
+  - Manchester United FC
+- !!python/unicode 'lazlaz':
+  - FSV Frankfurt
+  - 1. FC Kaiserslautern
+  - Karlsruher SC
