modified changes, information_server, main, users

--- a/users.yaml
+++ b/users.yaml
@@ -14,3 +14,7 @@
   - 1. FC Kaiserslautern
   - Karlsruher SC
 - !!python/unicode 'tt': []
+- !!python/unicode 'roi':
+  - !!python/str "Fortuna D\xFCsseldorf"
+  - !!python/str "SpVgg Greuther F\xFCrth"
+  - Shakhtar Donetsk
