--- a/users.yaml
+++ b/users.yaml
@@ -1,3 +1,12 @@
+- !!python/unicode 'omer':
+  - Arsenal
+  - Chelsea
+  - Liverpool
+  - Manchester City
+  - Manchester United
+  - Bayern Munich
+  - Barcelona
+  - Real Madrid
 - !!python/unicode '1':
   - AFC Bournemouth
   - Arsenal
@@ -8,6 +17,7 @@
   - Hull City
   - Leicester City
   - Liverpool
+  - Manchester City
   - Manchester United
   - Middlesbrough
   - Southampton
@@ -16,6 +26,7 @@
   - Swansea City
   - Tottenham Hotspur
   - Watford
+  - West Bromwich Albion
   - West Ham United
 - !!python/unicode '2':
   - Bayer Leverkusen
@@ -26,26 +37,30 @@
   - Bayern Munich
   - Schalke 04
   - FC Ingolstadt 04
+  - FC Cologne
   - Mainz
   - Hamburg SV
   - Hertha Berlin
   - RB Leipzig
   - SC Freiburg
   - SV Darmstadt 98
+  - TSG Hoffenheim
   - VfL Wolfsburg
   - Werder Bremen
 - !!python/unicode '3':
   - Angers
   - AS Monaco
+  - AS Nancy Lorraine
   - St Etienne
-  - Guingamp
   - Dijon FCO
+  - Guingamp
   - Bordeaux
   - Lorient
   - Metz
   - Nantes
   - Montpellier
   - Nice
+  - Marseille
   - Lyon
   - Lille
   - Paris Saint-Germain
@@ -66,9 +81,10 @@
   - Deportivo La Coru\u00f1a
   - Espanyol
   - Real Betis
-  - Real Sociedad
   - Real Madrid
+  - Real Sociedad
   - Eibar
+  - Sevilla FC
   - !!python/str "Sporting Gij\xF3n"
   - Las Palmas
   - Valencia
