datetime and duplicates

--- a/users.yaml
+++ b/users.yaml
@@ -110,3 +110,63 @@
   - Udinese
   - Palermo
   - Sassuolo
+- !!python/unicode 'dana':
+  - AFC Bournemouth
+  - Arsenal
+  - Burnley
+  - Chelsea
+  - Crystal Palace
+  - Everton
+  - Hull City
+  - Leicester City
+  - Liverpool
+  - Manchester City
+  - Manchester United
+  - Middlesbrough
+  - Southampton
+  - Stoke City
+  - Sunderland
+  - Swansea City
+  - Tottenham Hotspur
+  - Watford
+  - West Bromwich Albion
+  - West Ham United
+  - Bayer Leverkusen
+  - Borussia Dortmund
+  - Borussia Monchengladbach
+  - Eintracht Frankfurt
+  - FC Augsburg
+  - Bayern Munich
+  - Schalke 04
+  - FC Ingolstadt 04
+  - FC Cologne
+  - Mainz
+  - Hamburg SV
+  - Hertha Berlin
+  - RB Leipzig
+  - SC Freiburg
+  - SV Darmstadt 98
+  - TSG Hoffenheim
+  - VfL Wolfsburg
+  - Werder Bremen
+  - Angers
+  - AS Monaco
+  - AS Nancy Lorraine
+  - St Etienne
+  - Dijon FCO
+  - Guingamp
+  - Bordeaux
+  - Lorient
+  - Metz
+  - Nantes
+  - Montpellier
+  - Nice
+  - Marseille
+  - Lyon
+  - Lille
+  - Paris Saint-Germain
+  - Bastia
+  - Caen
+  - Stade Rennais
+  - Toulouse
+  - Athletic Bilbao
