added change_minutes and changed font

--- a/users.yaml
+++ b/users.yaml
@@ -170,3 +170,19 @@
   - Stade Rennais
   - Toulouse
   - Athletic Bilbao
+- !!python/unicode 'jjjj':
+  - AFC Bournemouth
+  - Arsenal
+  - Burnley
+- !!python/unicode 'jjjj':
+  - AFC Bournemouth
+  - Arsenal
+  - Burnley
+- !!python/unicode 'jjjj':
+  - AFC Bournemouth
+  - Arsenal
+  - Burnley
+- !!python/unicode 'jjjj':
+  - AFC Bournemouth
+  - Arsenal
+  - Burnley
