added click sound and convention

--- a/users.yaml
+++ b/users.yaml
@@ -109,4 +109,13 @@
   - Sampdoria
   - Udinese
   - Palermo
-  - Sassuolo
+  - Sassuolo- !!python/unicode 'hhhh': []
+- !!python/unicode 'rfhj': []
+- !!python/unicode 'omer': []
+- !!python/unicode 'omer': []
+- !!python/unicode 'omer': []
+- !!python/unicode 'uu': []
+- !!python/unicode 'uu': []
+- !!python/unicode 'uu': []
+- !!python/unicode 'yffggh': []
+- !!python/unicode 'yffggh': []
