--- a/users.yaml
+++ b/users.yaml
@@ -109,3 +109,8 @@
   - Sampdoria
   - Udinese
   - Palermo
+- !!python/unicode 'l':
+  - Liverpool
+- !!python/unicode 'chen':
+  - Liverpool
+  - Manchester United
