--- a/users.yaml
+++ b/users.yaml
@@ -114,3 +114,11 @@
 - !!python/unicode 'chen':
   - Liverpool
   - Manchester United
+- !!python/unicode 'or':
+  - Crystal Palace
+  - Chelsea
+  - Burnley
+  - Everton
+  - Hull City
+  - Leicester City
+  - Liverpool
